add: chat crud
